0.3 - 0.4

* Fixed header checks in configure
* Updated missing
  * This included moving smaSHeM.c to smaSHeM.cpp to force compilation using
    C++ compiler
* Cleaned up error messages in configure
* Added function checks in configure
* Added image dumping support
* Modernised configure.ac
* Added man/smaSHeM.1 man page
* Fixed Makefile generation in configure
* Removed duplicate header checks in configure
* Fixed Makefile
* Ran autoreconf --force --install
* Added man/Makefile.in
* Added config.h.in
* Added -v option to smaSHeM.c to display version and updated man/smaSHeM.1 man
  page to reflect this
* Fixed copyright dates on src/smaSHeM.{cpp,h}

0.2 - 0.3

* Ported to automake

0.1 - 0.2

* Fixed minor bug in distclean target of Makefile
* Tidied Makefile

0.0 - 0.1

* Initial PoC